--- a/setup.cfg
+++ b/setup.cfg
@@ -12,5 +12,5 @@ exclude =
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
-python_files = tests.py
+python_files = test_*.py
 addopts = -v
