--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,14 @@ Pygments==2.19.1
 pytest==8.3.5
 pytest-cov==6.1.1
 pytest-django==3.9.0
+python-dotenv==1.1.0
 pytz==2025.2
 sentry-sdk==2.27.0
 six==1.17.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.13.2
-urllib3<2.0
+urllib3==1.26.20
+gunicorn==21.2.0
+whitenoise
+setuptools
