--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,9 +1,10 @@
+# This is a GitHub Actions workflow file for a CI/CD pipeline.
 name: CI/CD Pipeline
 on:
   push:
-    branches: [main]
+    branches: [main, master]
     pull_request:
-      branches: [main]
+      branches: [main, master]
 
 jobs:
   test:
@@ -13,6 +14,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
