--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ entrypoints==0.3
 exceptiongroup==1.2.2
 flake8==7.2.0
 flake8-html==0.4.3
+gunicorn==23.0.0
 iniconfig==2.1.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
