--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,8 +4,7 @@ version: 2
 build:
   os: ubuntu-20.04
   tools:
-    python:
-      version: "3.9"
+    python: "3.9"
   jobs:
     pre_install:
       - pip install --upgrade pip
