--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,14 +5,9 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.9"
-  jobs:
-    pre_install:
-      - pip install --upgrade pip
-      - pip install -r requirements.txt
-    post_install:
-      - cd docs && make html
+
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 
 python:
   install:
